tests/regression/errors/basic/import_error_18.csd
// Import error test 18
yeet "nonexistent_module_18"
sus result drip = some_function(18)
